# Cemu

./: .gitmodules  BUILD.md  CMakeLists.txt  CODING_STYLE.md  README.md  vcpkg.json
.github/workflows/: build.yml  deploy_experimental_release.yml  deploy_release.yml  deploy_release_android.yml  determine_release_version.yml
dependencies/libucontext/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Cafe/: CMakeLists.txt  CafeSystem.cpp
src/Cafe/HW/Espresso/Debugger/: Debugger.cpp  Debugger.h
src/Cafe/HW/Espresso/Recompiler/BackendAArch64/: BackendAArch64.cpp  BackendAArch64.h
src/Cafe/HW/Espresso/Recompiler/BackendX64/: BackendX64.cpp
src/Cafe/HW/Latte/Core/: LatteOverlay.cpp  LattePerformanceMonitor.cpp  LatteShaderCache.cpp  LatteThread.cpp
src/Cafe/HW/Latte/LegacyShaderDecompiler/: LatteDecompilerEmitGLSL.cpp  LatteDecompilerEmitGLSLHeader.hpp
src/Cafe/HW/Latte/Renderer/: Renderer.h  RendererOuputShader.cpp
src/Cafe/HW/Latte/Renderer/OpenGL/: OpenGLRenderer.h
src/Cafe/HW/Latte/Renderer/Vulkan/: SwapchainInfoVk.cpp  SwapchainInfoVk.h  VulkanAPI.cpp  VulkanAPI.h  VulkanRenderer.cpp  VulkanRenderer.h
src/Cafe/OS/libs/padscore/: padscore.cpp
src/Cafe/OS/libs/vpad/: vpad.cpp
src/Common/: cpu_features.cpp  precompiled.h
src/Common/unix/: ContentUriStream.h
src/android/app/: build.gradle  build.gradle.kts
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/cpp/: AndroidFilesystemCallbacks.h  AndroidGameTitleLoadedCallback.h  AndroidSwkbdCallbacks.cpp  CMakeLists.txt  CompressTitleCallbacks.cpp  CompressTitleCallbacks.h  GameTitleLoader.cpp  JNIUtils.cpp  JNIUtils.h  NativeActiveSettings.cpp  NativeEmulation.cpp  NativeGameTitles.cpp  NativeGraphicPacks.cpp  NativeInput.cpp  NativeLogging.cpp  NativeSettings.cpp  NativeSwkbd.cpp  WuaConverter.cpp  WuaConverter.h
src/android/app/src/main/res/drawable/: button_z.xml
src/android/app/src/main/res/layout/: fragment_emulation.xml  layout_controller_input.xml  layout_emulation_input.xml  layout_side_menu_checkbox_item.xml  layout_side_menu_emulation.xml  layout_side_menu_text_item.xml
src/android/gradle/: libs.versions.toml
src/audio/: CubebAPI.cpp  CubebInputAPI.cpp  IAudioAPI.cpp  IAudioAPI.h
src/config/: ActiveSettings.cpp  ActiveSettings.h  CemuConfig.cpp  CemuConfig.h
src/gui/: CMakeLists.txt  CemuApp.cpp  GeneralSettings2.cpp  MainWindow.cpp  TitleManager.cpp
src/gui/debugger/: BreakpointWindow.cpp  DebuggerWindow2.cpp  DebuggerWindow2.h  DisasmCtrl.cpp  DisasmCtrl.h
src/gui/dialogs/SaveImport/: SaveImportWindow.cpp
src/gui/input/panels/: WiimoteInputPanel.cpp
src/input/: CMakeLists.txt
src/input/api/DSU/: DSUControllerProvider.h
src/input/api/Wiimote/l2cap/: L2CapWiimote.cpp  L2CapWiimote.h
src/util/: CMakeLists.txt
src/util/Fiber/: FiberUnix.cpp
(+177 files in other folders)
